feat: multiple recipe bfs
